--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
       </form>
       <span class="loader hidden"></span>
       <ul class="gallery" id="gallery"></ul>
+      <button class="loader-button hidden" type="submit">Load more</button>
     </div>
     <script type="module" src="./main.js"></script>
   </body>
